# qbs

./: .clang-tidy  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  docker-compose.yml  qbs.qbs
.github/actions/download-qtc/: action.yml
.github/workflows/: main.yml
cmake/: QbsAPI.cmake
doc/: fix-qmlimports.py
docker/windowsservercore/: Dockerfile
qbs-resources/imports/: QbsApp.qbs
scripts/: build-qbs-with-qbs.sh  test-qbs.sh
share/: CMakeLists.txt
share/qbs/modules/qbs/: common.qbs
src/: src.qbs
src/app/qbs/: CMakeLists.txt
src/app/shared/logging/: CMakeLists.txt  logging.qbs
src/lib/corelib/: corelib.qbs
src/lib/corelib/buildgraph/: transformerchangetracking.cpp
src/lib/corelib/generators/: generatorutils.h  generatorversioninfo.h
src/lib/corelib/tools/: msvcinfo.cpp
src/plugins/generator/iarew/: iarew.qbs  iarewversioninfo.cpp  iarewversioninfo.h
src/plugins/generator/keiluv/: keiluv.qbs  keiluvversioninfo.cpp  keiluvversioninfo.h
src/shared/gsl/: gsl.qbs
tests/auto/: auto.qbs
tests/auto/api/: tst_api.cpp
tests/auto/api/testdata/build-properties-source/: build-properties-source.qbs
tests/auto/api/testdata/explicitly-depends-on/: explicitly-depends-on.qbs
tests/auto/api/testdata/process-result/: process-result.qbs
tests/auto/api/testdata/timeout-process/: timeout.qbs
tests/auto/blackbox/: blackbox-joblimits.qbs  tst_blackbox.cpp  tst_blackboxapple.cpp  tst_blackboxqt.cpp
tests/auto/buildgraph/: buildgraph.qbs
tests/auto/cmdlineparser/: cmdlineparser.qbs
tests/auto/language/: language.qbs
(+7 files in other folders)
